charts/tesk/tesk-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-production
      kubernetes.io/tls-acme: "true"
      meta.helm.sh/release-name: tesk
      meta.helm.sh/release-namespace: tesk
    creationTimestamp: "2025-02-26T08:54:07Z"
    generation: 4
    labels:
      app.kubernetes.io/managed-by: Helm
    name: ingress-rules
    namespace: tesk
    resourceVersion: "25650812"
    uid: 660ee8b3-45d8-4367-89c9-56407a1544af
  spec:
    rules:
    - host: vm0319.kaj.pouta.csc.fi
      http:
        paths:
        - backend:
            service:
              name: tesk-api
              port:
                number: 8080
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.1.106
      - ip: 192.168.1.120
      - ip: 192.168.1.147
      - ip: 192.168.1.184
kind: List
metadata:
  resourceVersion: ""
